Fixed buttons, made CSS changes to remove color from Jumbotron background and change sentence font to black, also added spacing below button

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ table {
 }
 
 .jumbotron{
-  background-color:#666666;
+  background-color:white;
   width:100%;
 }
 .jumbotron h1{
@@ -32,13 +32,14 @@ table {
 
 .jumbotron p{
   font-weight:500;
-  color:white;
+  color:black;
 }
 
 .jumbotron .btn-primary {
     color: #ffffff;
     background-color: #E5790D;
-    border-color: #E5790D;
+    border-color:transparent;
+    margin-bottom:5px;
 }
 .thead{
   font-family: Avenir Next;
